components/nonmem/src/parsing/snapshots/nonmem__parser__parser__tests__can_do_theta_perturbation.snap
---
source: components/nonmem/src/parser/parser.rs
expression: params
---
[
    "$PROBLEM Some header #2\n$INPUT ID TIME DV DOSE=AMT DV WT AGE SEX CREA DATE=DROP\n$DATA /home/vincent/dataset.csv\n$THETA 1.508 (0,0.504,2)    ; THETA(1) and THETA(2)\n$THETA 2.3 FIX          ; THETA(3)\n$THETA 0.822 0.2453         ; THETA(4) and THETA(5)\n$TABLE LINE ID STUDY TIME ATLD NTFD NTLD DAY AMT RATE DUR CMT EVID DVID DV LDV MDV BLQ LLOQ ROUTE DOSEA DOSEN COHORT SEXF RACE AGEBL WTBL EGFRBL EXCFL AN01FL PRED IPRED CWRES WRES NPDE RES\n    NOPRINT NOAPPEND ONEHEADER FILE=run.output.tab FORMAT = s1PE12.5\n\n$TABLE ID STUDY TVCL TVVC TVQ TVVP TVKA TVF1 TVVMAX TVKM CL VC Q VP KA F1 VMAX KM ETAS(1:LAST)\n    FIRSTONLY NOPRINT NOAPPEND ONEHEADER FILE=run.param.tab",
    "$PROBLEM Some header #2\n$INPUT ID TIME DV DOSE=AMT DV WT AGE SEX CREA DATE=DROP\n$DATA /home/vincent/dataset.csv\n$THETA 1.36 (0,0.491,2)    ; THETA(1) and THETA(2)\n$THETA 2.3 FIX          ; THETA(3)\n$THETA 0.838 0.2675         ; THETA(4) and THETA(5)\n$TABLE LINE ID STUDY TIME ATLD NTFD NTLD DAY AMT RATE DUR CMT EVID DVID DV LDV MDV BLQ LLOQ ROUTE DOSEA DOSEN COHORT SEXF RACE AGEBL WTBL EGFRBL EXCFL AN01FL PRED IPRED CWRES WRES NPDE RES\n    NOPRINT NOAPPEND ONEHEADER FILE=run.output.tab FORMAT = s1PE12.5\n\n$TABLE ID STUDY TVCL TVVC TVQ TVVP TVKA TVF1 TVVMAX TVKM CL VC Q VP KA F1 VMAX KM ETAS(1:LAST)\n    FIRSTONLY NOPRINT NOAPPEND ONEHEADER FILE=run.param.tab",
    "$PROBLEM Some header #2\n$INPUT ID TIME DV DOSE=AMT DV WT AGE SEX CREA DATE=DROP\n$DATA /home/vincent/dataset.csv\n$THETA 1.389 (0,0.45,2)    ; THETA(1) and THETA(2)\n$THETA 2.3 FIX          ; THETA(3)\n$THETA 0.869 0.2503         ; THETA(4) and THETA(5)\n$TABLE LINE ID STUDY TIME ATLD NTFD NTLD DAY AMT RATE DUR CMT EVID DVID DV LDV MDV BLQ LLOQ ROUTE DOSEA DOSEN COHORT SEXF RACE AGEBL WTBL EGFRBL EXCFL AN01FL PRED IPRED CWRES WRES NPDE RES\n    NOPRINT NOAPPEND ONEHEADER FILE=run.output.tab FORMAT = s1PE12.5\n\n$TABLE ID STUDY TVCL TVVC TVQ TVVP TVKA TVF1 TVVMAX TVKM CL VC Q VP KA F1 VMAX KM ETAS(1:LAST)\n    FIRSTONLY NOPRINT NOAPPEND ONEHEADER FILE=run.param.tab",
]
