components/nonmem/src/parsing/snapshots/nonmem__parser__parser__tests__can_parse_mod_files@everything.mod.snap
---
source: components/nonmem/src/parser/parser.rs
expression: model
input_file: components/nonmem/test_data/parser/everything.mod
---
Model {
    problem: "Some header #2",
    input_columns: [
        Included(
            "ID",
        ),
        Included(
            "TIME",
        ),
        Included(
            "DV",
        ),
        Aliased {
            from: "AMT",
            to: "DOSE",
        },
        Included(
            "DV",
        ),
        Included(
            "WT",
        ),
        Included(
            "AGE",
        ),
        Included(
            "SEX",
        ),
        Included(
            "CREA",
        ),
        Dropped(
            "DATE",
        ),
    ],
    data: Data {
        path: "..\\data.csv",
        ignore: [
            Marker(
                "#",
            ),
            ValueFilter(
                DataValueFilter {
                    field: "DVID",
                    op: Equal,
                    value: 3.0,
                },
            ),
            ValueFilter(
                DataValueFilter {
                    field: "ID",
                    op: Equal,
                    value: 3.14,
                },
            ),
        ],
        accept: [
            ValueFilter(
                DataValueFilter {
                    field: "AGE",
                    op: Greater,
                    value: 3.0,
                },
            ),
            ValueFilter(
                DataValueFilter {
                    field: "SEX",
                    op: Equal,
                    value: 1.0,
                },
            ),
        ],
        num_records: Some(
            200,
        ),
    },
    subroutines: [
        "ADVAN4",
        "TRANS4",
    ],
    theta_parameters: [
        Parameter {
            lower_bound: None,
            initial_value: 1.5,
            upper_bound: None,
            is_fixed: false,
        },
        Parameter {
            lower_bound: Some(
                0.0,
            ),
            initial_value: 0.5,
            upper_bound: Some(
                2.0,
            ),
            is_fixed: false,
        },
        Parameter {
            lower_bound: None,
            initial_value: 2.3,
            upper_bound: None,
            is_fixed: true,
        },
        Parameter {
            lower_bound: None,
            initial_value: 0.8,
            upper_bound: None,
            is_fixed: false,
        },
        Parameter {
            lower_bound: None,
            initial_value: 0.25,
            upper_bound: None,
            is_fixed: false,
        },
        Parameter {
            lower_bound: Some(
                1.0,
            ),
            initial_value: 2.3,
            upper_bound: None,
            is_fixed: true,
        },
        Parameter {
            lower_bound: None,
            initial_value: 0.75,
            upper_bound: None,
            is_fixed: true,
        },
    ],
    omega_blocks: [
        ParameterBlock {
            structure: Diagonal,
            parametrization: None,
            parameters: [
                Parameter {
                    lower_bound: None,
                    initial_value: 0.04,
                    upper_bound: None,
                    is_fixed: false,
                },
            ],
        },
        ParameterBlock {
            structure: Diagonal,
            parametrization: None,
            parameters: [
                Parameter {
                    lower_bound: None,
                    initial_value: 0.17,
                    upper_bound: None,
                    is_fixed: false,
                },
            ],
        },
        ParameterBlock {
            structure: Block {
                size: 2,
            },
            parametrization: Some(
                Correlation,
            ),
            parameters: [
                Parameter {
                    lower_bound: None,
                    initial_value: 0.2,
                    upper_bound: None,
                    is_fixed: false,
                },
                Parameter {
                    lower_bound: None,
                    initial_value: 0.3,
                    upper_bound: None,
                    is_fixed: false,
                },
                Parameter {
                    lower_bound: None,
                    initial_value: 0.15,
                    upper_bound: None,
                    is_fixed: false,
                },
            ],
        },
        ParameterBlock {
            structure: BlockSame {
                size: 2,
            },
            parametrization: None,
            parameters: [],
        },
        ParameterBlock {
            structure: Diagonal,
            parametrization: None,
            parameters: [
                Parameter {
                    lower_bound: Some(
                        0.0,
                    ),
                    initial_value: 0.1,
                    upper_bound: Some(
                        1.0,
                    ),
                    is_fixed: true,
                },
            ],
        },
    ],
    sigma_blocks: [
        ParameterBlock {
            structure: Block {
                size: 2,
            },
            parametrization: None,
            parameters: [
                Parameter {
                    lower_bound: None,
                    initial_value: 0.01,
                    upper_bound: None,
                    is_fixed: false,
                },
                Parameter {
                    lower_bound: None,
                    initial_value: 0.002,
                    upper_bound: None,
                    is_fixed: false,
                },
                Parameter {
                    lower_bound: None,
                    initial_value: 0.25,
                    upper_bound: None,
                    is_fixed: false,
                },
            ],
        },
    ],
    estimations: [
        Estimation {
            method: Fo,
            msfo: None,
            file: None,
        },
        Estimation {
            method: Foce,
            msfo: Some(
                "../2.MSF",
            ),
            file: None,
        },
        Estimation {
            method: Imp,
            msfo: None,
            file: Some(
                "est",
            ),
        },
    ],
    tables: [
        "../2.TAB",
        "../2par.TAB",
    ],
    is_simulation_only: true,
}
