components/nonmem/src/parsing/snapshots/nonmem__parser__parser__tests__can_parse_mod_files@multiline_table.mod.snap
---
source: components/nonmem/src/parser/parser.rs
expression: model
input_file: components/nonmem/test_data/parser/multiline_table.mod
---
Model {
    problem: "Some header #2",
    input_columns: [
        Included(
            "ID",
        ),
        Included(
            "TIME",
        ),
        Included(
            "DV",
        ),
        Aliased {
            from: "AMT",
            to: "DOSE",
        },
        Included(
            "DV",
        ),
        Included(
            "WT",
        ),
        Included(
            "AGE",
        ),
        Included(
            "SEX",
        ),
        Included(
            "CREA",
        ),
        Dropped(
            "DATE",
        ),
    ],
    data: Data {
        path: "..\\data.csv",
        ignore: [],
        accept: [],
        num_records: None,
    },
    subroutines: [],
    theta_parameters: [
        Parameter {
            lower_bound: None,
            initial_value: 1.5,
            upper_bound: None,
            is_fixed: false,
        },
        Parameter {
            lower_bound: Some(
                0.0,
            ),
            initial_value: 0.5,
            upper_bound: Some(
                2.0,
            ),
            is_fixed: false,
        },
        Parameter {
            lower_bound: None,
            initial_value: 2.3,
            upper_bound: None,
            is_fixed: true,
        },
        Parameter {
            lower_bound: None,
            initial_value: 0.8,
            upper_bound: None,
            is_fixed: false,
        },
        Parameter {
            lower_bound: None,
            initial_value: 0.25,
            upper_bound: None,
            is_fixed: false,
        },
    ],
    omega_blocks: [],
    sigma_blocks: [],
    estimations: [],
    tables: [
        "run.output.tab",
        "run.param.tab",
    ],
    is_simulation_only: false,
}
